update 0.5 add blur tab bar

--- a/phone/style.css
+++ b/phone/style.css
@@ -3,7 +3,7 @@
 .background {
 	bottom: 14%;
 	animation-name: slide;
-  	animation-duration: 2s;
+  	animation-duration: 1s;
   	animation-fill-mode: forwards;
 	position: fixed;
 }
@@ -25,8 +25,18 @@
 
 .statubar
 {
-	position: relative;
-	z-index: 10000;
+	position: absolute;
+    z-index: 1000;
+    background-color: rgba(255, 255, 255, 0);
+    display: block;
+    height: 28px;
+    width: 270px;
+    top: 7px;
+    left: 7px;
+    visibility: hidden;
+    transition: all .2s ease-in;
+    border-radius: 35px 35px 0px 0px;
+    backdrop-filter: blur(2px);
 }
 
 .screen_lock{
@@ -52,15 +62,26 @@
 	visibility: hidden;
 }
 
-.screen:hover .screen_unlock 
-{
-	/*opacity: 1;*/
-	/*visibility: visible;*/
-}
-
 @keyframes slide {
   from 	{right:-50%;}
   to  	{right:4%;}
+}
+
+.tab_bar {
+	margin-bottom: 3px;
+	width: 268px;
+	height: 32px;
+	bottom: 0;
+	left: 7px;
+	border-radius: 0px 0px 29px 29px;
+	background: rgba(255, 255, 255, 0.5);
+	opacity: 0;
+	z-index: 0;
+	position: absolute;
+	border: 1px solid rgba(200, 200, 200, 0.05);
+	visibility: hidden;
+    backdrop-filter: blur(0px);
+
 }
 
 #camera {
@@ -68,6 +89,7 @@
 	width: 40px;
 	background-color: black;
  	position: absolute;
+ 	z-index: 1000000;
 	top: -20px;
  	left: 45%;
  	clip-path: polygon(0% 0%, 100% 100%, 0% 100%);
@@ -85,7 +107,7 @@
 #battery {
 	width: 7%;
     height: auto;
-	top: 13.1px;
+	top: 6px;
 	right: 5%;
 	position: absolute;
 	opacity: 80%;
@@ -94,7 +116,7 @@
 #wifi {
 	width: 5%;
     height: auto;
-	top: 14.5px;
+	top: 8px;
 	right: 19%;
 	position: absolute;
 	opacity: 80%;
@@ -103,7 +125,7 @@
 #signal {
 	width: 5%;
     height: auto;
-	top: 14.5px;
+	top: 8px;
 	right: 13%;
 	position: absolute;
 	opacity: 80%;
@@ -157,7 +179,7 @@
 	width: 50px;
 	height: auto;
 	right: 26%;
-	bottom: 5%;
+	bottom: 10%;
 	position: absolute;
 }
 
@@ -165,7 +187,7 @@
 	width: 50px;
 	height: auto;
 	left: 10%;
-	bottom: 5%;
+	bottom: 10%;
 	position: absolute;
 }
 
@@ -173,7 +195,7 @@
 	width: 50px;
 	height: auto;
 	left: 33%;
-	bottom: 5%;
+	bottom: 10%;
 	position: absolute;
 }
 
@@ -181,7 +203,7 @@
 	width: 50px;
 	height: auto;
 	right: 3%;
-	bottom: 5%;
+	bottom: 10%;
 	position: absolute;
 }
 
@@ -189,7 +211,7 @@
 	width: 50px;
 	height: auto;
 	right: 3%;
-	bottom: 15%;
+	bottom: 25%;
 	position: absolute;
 }
 
@@ -197,7 +219,7 @@
 	width: 50px;
 	height: auto;
 	right: 26%;
-	bottom: 15%;
+	bottom: 25%;
 	position: absolute;
 }
 
@@ -213,9 +235,23 @@
 	visibility: hidden;
 }
 
-.active {
+.active_screen {
 	visibility: visible !important;
 	opacity: 1;
+}
+
+.active_tab_bar {
+	visibility: visible;
+	opacity: 1;
+	z-index: 100000;
+	backdrop-filter: blur(2px);
+}
+
+.active_status_bar {
+	visibility: visible;
+	opacity: 1;
+	background-color: rgba(255, 255, 255, 0.5);
+	backdrop-filter: blur(2px);
 }
 
 .chatbox {
@@ -225,22 +261,30 @@
 	width: 270px;
 	height: 565px;
 	/*border: 7px solid #000;*/
-	border-radius: 27px;
+	border-radius:27px;
 	/*visibility: hidden;/*/
 	position: absolute;
 }
 
 .chatlogs {
-	padding: 10px;
-	width: 275px;
-	height: 545px;
-	overflow-x: hidden;
-	overflow-y: scroll;
-	/*background: #ccc;*/
+    /* padding: 2px; */
+    width: 270px;
+    height: 565px;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    /* margin-top: 25px; */
+    /* margin-left: 5px; */
+    border-radius: 27px;
+    /* background: #ccc;*/
+}
+
+.chatlogs .spacer
+{
+	margin-bottom: 76px;
 }
 
 .chatlogs::-webkit-scrollbar {
-	width: 10px;
+	width: 0px !important;
 }
 
 .chatlogs::-webkit-scrollbar-thumb {
@@ -252,7 +296,7 @@
 	display: flex;
 	flex-flow: row wrap;
 	align-items: flex-start;
-	margin-bottom: 5px;
+	margin-bottom: 15px;
 	margin-top: 15px;
 }
 
@@ -266,7 +310,7 @@
 .chat .chat_message {
 	width: 70%;
 	padding: 7px;
-	margin: 2.5px 5px 0;
+	margin: 2.5px 6px 0;
 	background: #fd4545;
 	border-radius: 5px;
 	color: #fff;
